parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    ELEVATE
    ELSE
    FLOAT
    FORA
    INTA
    MAIN
    PERCENT
    PROCEDURE
    QUOTE
    SLASH
    SPACE
    STR
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> BEGIN subB END SEMICOLON
Rule 2     subB -> subB ID LC block RC
Rule 3     subB -> empty
Rule 4     block -> statementList variableDec statement
Rule 5     block -> empty
Rule 6     statementList -> statementList1 statementList2
Rule 7     statementList -> empty
Rule 8     variableDec -> variableType ID arrayStruct initiateVar SEMICOLON
Rule 9     variableDec -> empty
Rule 10    initiateVar -> ASSIGN value
Rule 11    initiateVar -> empty
Rule 12    arrayStruct -> LPAREN NUMBER RPAREN
Rule 13    arrayStruct -> empty
Rule 14    xType -> numberType
Rule 15    xType -> arrayType2
Rule 16    variableType -> INT
Rule 17    variableType -> TEXTO LPAREN NUMBER RPAREN
Rule 18    variableType -> empty
Rule 19    value -> NUMBER
Rule 20    value -> STRING
Rule 21    statement -> BALLOON LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 22    statement -> DOW LPAREN numberType RPAREN statementList ENDDO SEMICOLON
Rule 23    statement -> RANDOM LPAREN arrayT COLON numberType COLON numberType RPAREN SEMICOLON
Rule 24    statement -> IF LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON
Rule 25    statement -> INC LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 26    statement -> DEC LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 27    statement -> FOR numberType TIMES USING arrayT randomInFor block FOREND SEMICOLON
Rule 28    statement -> FORASIGNWORD LPAREN numberType COLON numberType RPAREN DO ASIGNWORD LPAREN arrayT COLON arrayT RPAREN SEMICOLON
Rule 29    statement -> TELAARANA LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 30    statement -> OBJECT LPAREN numberType COLON xType COLON numberType RPAREN SEMICOLON
Rule 31    statement -> FOR numberType TIMES USING ID statementList FEND SEMICOLON
Rule 32    statement -> ARRAY ID LPAREN numberType RPAREN initiateVar SEMICOLON
Rule 33    statement -> empty
Rule 34    statementList1 -> block statement
Rule 35    statementList2 -> block variableDec
Rule 36    randomInFor -> RANDOM LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 37    condition -> expression relation expression
Rule 38    relation -> ASSIGN
Rule 39    relation -> NE
Rule 40    relation -> LESS
Rule 41    relation -> GREATER
Rule 42    relation -> EQLESS
Rule 43    relation -> EQGREATER
Rule 44    relation -> EQUAL
Rule 45    expression -> term
Rule 46    expression -> addingOperator term
Rule 47    expression -> expression addingOperator term
Rule 48    addingOperator -> PLUS
Rule 49    addingOperator -> MINUS
Rule 50    term -> factor
Rule 51    term -> term multiplyingOperator factor
Rule 52    multiplyingOperator -> MULT
Rule 53    multiplyingOperator -> DIVIDE
Rule 54    factor -> ID
Rule 55    factor -> NUMBER
Rule 56    factor -> ID SLPAREN NUMBER SRPAREN
Rule 57    numberType -> NUMBER
Rule 58    numberType -> INT ID
Rule 59    arrayType -> ARRAY ID LPAREN numberType RPAREN
Rule 60    arrayType2 -> ARRAY ID LPAREN ID RPAREN
Rule 61    arrayT -> ARRAY ID
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 32 59 60 61
ASIGNWORD            : 28
ASSIGN               : 10 38
BALLOON              : 21
BEGIN                : 1
COLON                : 21 23 23 25 26 28 28 29 30 30 36
COMMENT              : 
DEC                  : 26
DIVIDE               : 53
DO                   : 28
DOW                  : 22
ELEVATE              : 
ELSE                 : 
END                  : 1
ENDDO                : 22
ENDIF                : 24
EQGREATER            : 43
EQLESS               : 42
EQUAL                : 44
FEND                 : 31
FLOAT                : 
FOR                  : 27 31
FORA                 : 
FORASIGNWORD         : 28
FOREND               : 27
GREATER              : 41
ID                   : 2 8 31 32 54 56 58 59 60 60 61
IF                   : 24
INC                  : 25
INT                  : 16 58
INTA                 : 
LC                   : 2
LESS                 : 40
LPAREN               : 12 17 21 22 23 24 25 26 28 28 29 30 32 36 59 60
MAIN                 : 
MINUS                : 49
MULT                 : 52
NE                   : 39
NUMBER               : 12 17 19 55 56 57
OBJECT               : 30
PERCENT              : 
PLUS                 : 48
PROCEDURE            : 
QUOTE                : 
RANDOM               : 23 36
RC                   : 2
RPAREN               : 12 17 21 22 23 24 25 26 28 28 29 30 32 36 59 60
SEMICOLON            : 1 8 21 22 23 24 24 25 26 27 28 29 30 31 32 36
SLASH                : 
SLPAREN              : 56
SPACE                : 
SRPAREN              : 56
STR                  : 
STRING               : 20
TELAARANA            : 29
TEXTO                : 17
TIMES                : 27 31
USING                : 27 31
WHILE                : 
error                : 

Nonterminals, with rules where they appear

addingOperator       : 46 47
arrayStruct          : 8
arrayT               : 23 27 28 28
arrayType            : 
arrayType2           : 15
block                : 2 27 34 35
condition            : 24
empty                : 3 5 7 9 11 13 18 33
expression           : 37 37 47
factor               : 50 51
initiateVar          : 8 32
multiplyingOperator  : 51
numberType           : 14 21 21 22 23 23 25 25 26 26 27 28 28 29 29 30 30 31 32 36 36 59
program              : 0
randomInFor          : 27
relation             : 37
statement            : 4 24 34
statementList        : 4 22 31
statementList1       : 6
statementList2       : 6
subB                 : 1 2
term                 : 45 46 47 51
value                : 10
variableDec          : 4 35
variableType         : 8
xType                : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . BEGIN subB END SEMICOLON

    BEGIN           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> BEGIN . subB END SEMICOLON
    (2) subB -> . subB ID LC block RC
    (3) subB -> . empty
    (62) empty -> .

    END             reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)

    subB                           shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) program -> BEGIN subB . END SEMICOLON
    (2) subB -> subB . ID LC block RC

    END             shift and go to state 5
    ID              shift and go to state 6


state 4

    (3) subB -> empty .

    END             reduce using rule 3 (subB -> empty .)
    ID              reduce using rule 3 (subB -> empty .)


state 5

    (1) program -> BEGIN subB END . SEMICOLON

    SEMICOLON       shift and go to state 7


state 6

    (2) subB -> subB ID . LC block RC

    LC              shift and go to state 8


state 7

    (1) program -> BEGIN subB END SEMICOLON .

    $end            reduce using rule 1 (program -> BEGIN subB END SEMICOLON .)


state 8

    (2) subB -> subB ID LC . block RC
    (4) block -> . statementList variableDec statement
    (5) block -> . empty
    (6) statementList -> . statementList1 statementList2
    (7) statementList -> . empty
    (62) empty -> .
    (34) statementList1 -> . block statement

    RC              reduce using rule 62 (empty -> .)
    BALLOON         reduce using rule 62 (empty -> .)
    DOW             reduce using rule 62 (empty -> .)
    RANDOM          reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    INC             reduce using rule 62 (empty -> .)
    DEC             reduce using rule 62 (empty -> .)
    FOR             reduce using rule 62 (empty -> .)
    FORASIGNWORD    reduce using rule 62 (empty -> .)
    TELAARANA       reduce using rule 62 (empty -> .)
    OBJECT          reduce using rule 62 (empty -> .)
    ARRAY           reduce using rule 62 (empty -> .)
    INT             reduce using rule 62 (empty -> .)
    TEXTO           reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)

    block                          shift and go to state 9
    statementList                  shift and go to state 10
    empty                          shift and go to state 11
    statementList1                 shift and go to state 12

state 9

    (2) subB -> subB ID LC block . RC
    (34) statementList1 -> block . statement
    (21) statement -> . BALLOON LPAREN numberType COLON numberType RPAREN SEMICOLON
    (22) statement -> . DOW LPAREN numberType RPAREN statementList ENDDO SEMICOLON
    (23) statement -> . RANDOM LPAREN arrayT COLON numberType COLON numberType RPAREN SEMICOLON
    (24) statement -> . IF LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON
    (25) statement -> . INC LPAREN numberType COLON numberType RPAREN SEMICOLON
    (26) statement -> . DEC LPAREN numberType COLON numberType RPAREN SEMICOLON
    (27) statement -> . FOR numberType TIMES USING arrayT randomInFor block FOREND SEMICOLON
    (28) statement -> . FORASIGNWORD LPAREN numberType COLON numberType RPAREN DO ASIGNWORD LPAREN arrayT COLON arrayT RPAREN SEMICOLON
    (29) statement -> . TELAARANA LPAREN numberType COLON numberType RPAREN SEMICOLON
    (30) statement -> . OBJECT LPAREN numberType COLON xType COLON numberType RPAREN SEMICOLON
    (31) statement -> . FOR numberType TIMES USING ID statementList FEND SEMICOLON
    (32) statement -> . ARRAY ID LPAREN numberType RPAREN initiateVar SEMICOLON
    (33) statement -> . empty
    (62) empty -> .

  ! shift/reduce conflict for RC resolved as shift
  ! shift/reduce conflict for BALLOON resolved as shift
  ! shift/reduce conflict for DOW resolved as shift
  ! shift/reduce conflict for RANDOM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for FORASIGNWORD resolved as shift
  ! shift/reduce conflict for TELAARANA resolved as shift
  ! shift/reduce conflict for OBJECT resolved as shift
  ! shift/reduce conflict for ARRAY resolved as shift
    RC              shift and go to state 13
    BALLOON         shift and go to state 15
    DOW             shift and go to state 16
    RANDOM          shift and go to state 17
    IF              shift and go to state 18
    INC             shift and go to state 19
    DEC             shift and go to state 20
    FOR             shift and go to state 21
    FORASIGNWORD    shift and go to state 22
    TELAARANA       shift and go to state 23
    OBJECT          shift and go to state 24
    ARRAY           shift and go to state 25
    INT             reduce using rule 62 (empty -> .)
    TEXTO           reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)

  ! RC              [ reduce using rule 62 (empty -> .) ]
  ! BALLOON         [ reduce using rule 62 (empty -> .) ]
  ! DOW             [ reduce using rule 62 (empty -> .) ]
  ! RANDOM          [ reduce using rule 62 (empty -> .) ]
  ! IF              [ reduce using rule 62 (empty -> .) ]
  ! INC             [ reduce using rule 62 (empty -> .) ]
  ! DEC             [ reduce using rule 62 (empty -> .) ]
  ! FOR             [ reduce using rule 62 (empty -> .) ]
  ! FORASIGNWORD    [ reduce using rule 62 (empty -> .) ]
  ! TELAARANA       [ reduce using rule 62 (empty -> .) ]
  ! OBJECT          [ reduce using rule 62 (empty -> .) ]
  ! ARRAY           [ reduce using rule 62 (empty -> .) ]

    statement                      shift and go to state 14
    empty                          shift and go to state 26

state 10

    (4) block -> statementList . variableDec statement
    (8) variableDec -> . variableType ID arrayStruct initiateVar SEMICOLON
    (9) variableDec -> . empty
    (16) variableType -> . INT
    (17) variableType -> . TEXTO LPAREN NUMBER RPAREN
    (18) variableType -> . empty
    (62) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for TEXTO resolved as shift
    INT             shift and go to state 30
    TEXTO           shift and go to state 31
    BALLOON         reduce using rule 62 (empty -> .)
    DOW             reduce using rule 62 (empty -> .)
    RANDOM          reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    INC             reduce using rule 62 (empty -> .)
    DEC             reduce using rule 62 (empty -> .)
    FOR             reduce using rule 62 (empty -> .)
    FORASIGNWORD    reduce using rule 62 (empty -> .)
    TELAARANA       reduce using rule 62 (empty -> .)
    OBJECT          reduce using rule 62 (empty -> .)
    ARRAY           reduce using rule 62 (empty -> .)
    RC              reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)
    ENDDO           reduce using rule 62 (empty -> .)
    FEND            reduce using rule 62 (empty -> .)
    FOREND          reduce using rule 62 (empty -> .)

  ! INT             [ reduce using rule 62 (empty -> .) ]
  ! TEXTO           [ reduce using rule 62 (empty -> .) ]

    variableDec                    shift and go to state 27
    variableType                   shift and go to state 28
    empty                          shift and go to state 29

state 11

    (5) block -> empty .
    (7) statementList -> empty .

  ! reduce/reduce conflict for RC resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for BALLOON resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for DOW resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for RANDOM resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for IF resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for INC resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for DEC resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for FOR resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for FORASIGNWORD resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for TELAARANA resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for OBJECT resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for ARRAY resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for INT resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for TEXTO resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for ID resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for ENDDO resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for FEND resolved using rule 5 (block -> empty .)
  ! reduce/reduce conflict for FOREND resolved using rule 5 (block -> empty .)
    RC              reduce using rule 5 (block -> empty .)
    BALLOON         reduce using rule 5 (block -> empty .)
    DOW             reduce using rule 5 (block -> empty .)
    RANDOM          reduce using rule 5 (block -> empty .)
    IF              reduce using rule 5 (block -> empty .)
    INC             reduce using rule 5 (block -> empty .)
    DEC             reduce using rule 5 (block -> empty .)
    FOR             reduce using rule 5 (block -> empty .)
    FORASIGNWORD    reduce using rule 5 (block -> empty .)
    TELAARANA       reduce using rule 5 (block -> empty .)
    OBJECT          reduce using rule 5 (block -> empty .)
    ARRAY           reduce using rule 5 (block -> empty .)
    INT             reduce using rule 5 (block -> empty .)
    TEXTO           reduce using rule 5 (block -> empty .)
    ID              reduce using rule 5 (block -> empty .)
    ENDDO           reduce using rule 5 (block -> empty .)
    FEND            reduce using rule 5 (block -> empty .)
    FOREND          reduce using rule 5 (block -> empty .)

  ! RC              [ reduce using rule 7 (statementList -> empty .) ]
  ! BALLOON         [ reduce using rule 7 (statementList -> empty .) ]
  ! DOW             [ reduce using rule 7 (statementList -> empty .) ]
  ! RANDOM          [ reduce using rule 7 (statementList -> empty .) ]
  ! IF              [ reduce using rule 7 (statementList -> empty .) ]
  ! INC             [ reduce using rule 7 (statementList -> empty .) ]
  ! DEC             [ reduce using rule 7 (statementList -> empty .) ]
  ! FOR             [ reduce using rule 7 (statementList -> empty .) ]
  ! FORASIGNWORD    [ reduce using rule 7 (statementList -> empty .) ]
  ! TELAARANA       [ reduce using rule 7 (statementList -> empty .) ]
  ! OBJECT          [ reduce using rule 7 (statementList -> empty .) ]
  ! ARRAY           [ reduce using rule 7 (statementList -> empty .) ]
  ! INT             [ reduce using rule 7 (statementList -> empty .) ]
  ! TEXTO           [ reduce using rule 7 (statementList -> empty .) ]
  ! ID              [ reduce using rule 7 (statementList -> empty .) ]
  ! ENDDO           [ reduce using rule 7 (statementList -> empty .) ]
  ! FEND            [ reduce using rule 7 (statementList -> empty .) ]
  ! FOREND          [ reduce using rule 7 (statementList -> empty .) ]


state 12

    (6) statementList -> statementList1 . statementList2
    (35) statementList2 -> . block variableDec
    (4) block -> . statementList variableDec statement
    (5) block -> . empty
    (6) statementList -> . statementList1 statementList2
    (7) statementList -> . empty
    (62) empty -> .
    (34) statementList1 -> . block statement

    BALLOON         reduce using rule 62 (empty -> .)
    DOW             reduce using rule 62 (empty -> .)
    RANDOM          reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    INC             reduce using rule 62 (empty -> .)
    DEC             reduce using rule 62 (empty -> .)
    FOR             reduce using rule 62 (empty -> .)
    FORASIGNWORD    reduce using rule 62 (empty -> .)
    TELAARANA       reduce using rule 62 (empty -> .)
    OBJECT          reduce using rule 62 (empty -> .)
    ARRAY           reduce using rule 62 (empty -> .)
    INT             reduce using rule 62 (empty -> .)
    TEXTO           reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)
    RC              reduce using rule 62 (empty -> .)
    ENDDO           reduce using rule 62 (empty -> .)
    FEND            reduce using rule 62 (empty -> .)
    FOREND          reduce using rule 62 (empty -> .)

    statementList1                 shift and go to state 12
    statementList2                 shift and go to state 32
    block                          shift and go to state 33
    statementList                  shift and go to state 10
    empty                          shift and go to state 11

state 13

    (2) subB -> subB ID LC block RC .

    END             reduce using rule 2 (subB -> subB ID LC block RC .)
    ID              reduce using rule 2 (subB -> subB ID LC block RC .)


state 14

    (34) statementList1 -> block statement .

    RC              reduce using rule 34 (statementList1 -> block statement .)
    BALLOON         reduce using rule 34 (statementList1 -> block statement .)
    DOW             reduce using rule 34 (statementList1 -> block statement .)
    RANDOM          reduce using rule 34 (statementList1 -> block statement .)
    IF              reduce using rule 34 (statementList1 -> block statement .)
    INC             reduce using rule 34 (statementList1 -> block statement .)
    DEC             reduce using rule 34 (statementList1 -> block statement .)
    FOR             reduce using rule 34 (statementList1 -> block statement .)
    FORASIGNWORD    reduce using rule 34 (statementList1 -> block statement .)
    TELAARANA       reduce using rule 34 (statementList1 -> block statement .)
    OBJECT          reduce using rule 34 (statementList1 -> block statement .)
    ARRAY           reduce using rule 34 (statementList1 -> block statement .)
    INT             reduce using rule 34 (statementList1 -> block statement .)
    TEXTO           reduce using rule 34 (statementList1 -> block statement .)
    ID              reduce using rule 34 (statementList1 -> block statement .)
    ENDDO           reduce using rule 34 (statementList1 -> block statement .)
    FEND            reduce using rule 34 (statementList1 -> block statement .)
    FOREND          reduce using rule 34 (statementList1 -> block statement .)


state 15

    (21) statement -> BALLOON . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 34


state 16

    (22) statement -> DOW . LPAREN numberType RPAREN statementList ENDDO SEMICOLON

    LPAREN          shift and go to state 35


state 17

    (23) statement -> RANDOM . LPAREN arrayT COLON numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 36


state 18

    (24) statement -> IF . LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON

    LPAREN          shift and go to state 37


state 19

    (25) statement -> INC . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 38


state 20

    (26) statement -> DEC . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 21

    (27) statement -> FOR . numberType TIMES USING arrayT randomInFor block FOREND SEMICOLON
    (31) statement -> FOR . numberType TIMES USING ID statementList FEND SEMICOLON
    (57) numberType -> . NUMBER
    (58) numberType -> . INT ID
